chore: change route & tag

--- a/src/assets/style/element-variables.scss
+++ b/src/assets/style/element-variables.scss
@@ -9,3 +9,4 @@ $--colors: (
 $--font-path: 'element-plus/lib/theme-chalk/fonts';
 @import 'element-plus/packages/theme-chalk/src/reset';
 @import 'element-plus/packages/theme-chalk/src/index';
+@import 'element-ui.scss';
