--- a/src/assets/style/element-ui.scss
+++ b/src/assets/style/element-ui.scss
@@ -3,3 +3,44 @@
   height: 25px;
   line-height: 25px;
 }
+
+
+// table
+.default-table.el-table {
+  --el-table-border-color: transparent;
+  border: 1px solid #eaeaea;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+.el-table--small th,
+.el-table--small td {
+  padding: 0;
+}
+
+.el-table--enable-row-hover .el-table__body tr:hover>td {
+  background-color: #090000;
+}
+
+.el-table--enable-row-hover .el-table__body tr:hover {
+  box-shadow: 0px 0px 3px #5971f7;
+}
+
+.el-radio-button--small .el-radio-button__inner {
+  padding: 6px 10px;
+}
+
+.heigh-light {
+  color: #5c6ac4;
+}
+
+.increase {
+  color:dodgerblue
+}
+
+.decrease {
+  color: tomato;
+}
