--- a/src/assets/style/global-variables.scss
+++ b/src/assets/style/global-variables.scss
@@ -17,3 +17,6 @@ $collapseMenuActiveBorderWidth: 2px;
 $arrowColor: #909399;
 $horizontalMenuHeight: 40px;
 $verticalMenuHeight: 48px;
+
+
+$inputBackgroundColor: #F9FAFB;
