--- a/src/assets/style/global-variables.scss
+++ b/src/assets/style/global-variables.scss
@@ -18,5 +18,9 @@ $arrowColor: #909399;
 $horizontalMenuHeight: 40px;
 $verticalMenuHeight: 48px;
 
-
-$inputBackgroundColor: #F9FAFB;
+$inputPlaceholderColor: #909399;
+// $inputPlaceholderColor: #aeaeaf;
+$inputBackgroundColor: #F5F6F9;
+// $inputBackgroundColor: #eeeff6;
+// $inputBackgroundColor: #f3f7fe;
+// $inputBackgroundColor: #F9FAFB;
